--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1817,10 +1817,11 @@ textarea {
 }
 .navigation__link {
   color: #fcfcfc;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navigation__link:hover, .navigation__link:focus {
   color: #131313;
+  transform: scale(1.1);
 }
 
 .upper {
