--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -8,7 +8,7 @@
     padding-left: 20px;
     padding-right: 21px;
 
-@media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
     padding-top: 60px;    
     padding-bottom: 43px;
     padding-left: 32px;
@@ -23,7 +23,6 @@
 }
 
 .about__content {
-    
     @media screen and (min-width: 768px) {
     display: flex;}
 }
@@ -34,8 +33,8 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 32px;
-    
-    @media screen and (min-width: 768px) {
+   
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
         margin-bottom: 72px;}
 
     @media screen and (min-width: 1200px) {
@@ -51,7 +50,7 @@
     
     margin-bottom: 12px;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
     font-weight: 800;
     font-size: 22px;
     line-height: 1.23; 
@@ -72,18 +71,16 @@
     text-transform: uppercase;
     color: getColor(primary-light);
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 767.5px) {
     width: 200px;}
     
-    @media screen and (min-width: 768px) {
-    
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
     font-size: 34px;
     line-height: 1.26;  
     letter-spacing: 0.06em;  
 
     }
-        @media screen and (min-width: 1200px) {
-     
+        @media screen and (min-width: 1200px) {  
     font-size: 36px;
     line-height: 1.25;
     }
@@ -100,20 +97,18 @@
     background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
     box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
     
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 767.5px) {
     margin-bottom: 62px;}
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
         width: 330px;
         height: 330px;
-        // margin-bottom: 86px; 
         margin-right: 38px;  
              }
         
         @media screen and (min-width: 1200px) {
         width: 490px;
         height: 490px;
-        // margin-bottom: 99px;
         margin-right: 110px;  
             }
 }
@@ -123,7 +118,7 @@
     top: 22px;
     width: 279px;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
     top: 26px; 
     width: 330px;   
          }
@@ -137,11 +132,11 @@
 .about__info {    
     width: 220px;
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 767.5px) {
     margin-right: auto;
     margin-left: auto;}
     
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: 334px;
     padding-top: 8px;}
 
@@ -159,10 +154,10 @@
 
     margin-bottom: 4px;
    
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 767.5px) {
     text-align: center;}
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-bottom: 8px;}
 
     @media screen and (min-width: 1200px) {
@@ -179,10 +174,10 @@
 
     margin-bottom: 10px;
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 767.5px) {
     text-align: center;}
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
     line-height: 1.76;
     letter-spacing: 0.04em;}
 
@@ -192,7 +187,7 @@
 }
 
 .about__recap{
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 767.5px) {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -204,7 +199,7 @@
     clip: rect(0 0 0 0);
     overflow: hidden;}
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
     font-weight: 400;
     font-size: 12px;
     line-height: 1.94;
@@ -231,7 +226,7 @@
     border-radius: 10px;
     background: #F8D24E;
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.5px) {
     margin-right: auto;
     margin-left: auto;}
 }
