--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,11 +1,11 @@
 <footer class="footer">
   <div class="container footer__blocks">
-    <div class="footer__text">
+    <div class="footer__text element-animation">
       <p class="footer__uppertitle">homemade ice cream made</p>
       <p class="footer__undertitle">with passion</p>
     </div>
 
-    <div class="footer__second-block">
+    <div class="footer__second-block element-animation">
       <ul class="footer__list">
         <li class="footer__item">
           <a
