--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -62,6 +62,10 @@
   }
 }
 
+.footer__text.element-show {
+  animation: slide-to-top 400ms ease-out 700ms both;
+}
+
 .footer__blocks {
   @media screen and (min-width: 768px) {
     display: flex;
@@ -82,6 +86,10 @@
 
   @media screen and (min-width: 1200px) {
     width: 338px;
+  }
+
+  &.element-show {
+    animation: slide-to-left 400ms ease-out 700ms both;
   }
 }
 
