--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,9 +2,11 @@
   <div class="container hero__container">
     <div class="hero__flex-box">
       <div class="hero__main-block">
-        <h1 class="hero__title">
-          ice cream made with <span class="hero__title-part">passion</span>
-        </h1>
+        <div class="hero__title-for-animation">
+          <h1 class="hero__title">
+            ice cream made with <span class="hero__title-part">passion</span>
+          </h1>
+        </div>
         <ul class="hero__link-list">
           <li><a class="hero__products-link" href="#products">Products</a></li>
           <li><a class="hero__made-link" href="#about">How it’s made?</a></li>
