--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,3 +1,6 @@
+.hero {
+  overflow: hidden;
+}
 .hero__container {
   position: relative;
   padding-top: 38px;
@@ -58,7 +61,13 @@
     margin-bottom: 109px;
   }
 }
-
+.hero__title-for-animation {
+  @media screen and (min-width: 1200px) {
+    animation: title-vibration 0.3s both;
+    animation-delay: 4000ms;
+    animation-iteration-count: 10;
+  }
+}
 .hero__title {
   //   padding-right: 53px;
   margin-bottom: 32px;
@@ -83,6 +92,9 @@
     max-width: 367px;
     font-size: 38px;
     line-height: calc(48 / 38);
+
+    animation: title-animation 3500ms cubic-bezier(0, 0.5, 0.7, 1) both;
+    animation-delay: 500ms;
   }
 }
 
@@ -131,7 +143,6 @@
     border-color: getColor(active-green);
     @media screen and (min-width: 1200px) {
       color: #fcfcfc;
-      // border-color: getColor(active-green);
     }
   }
 
@@ -303,6 +314,9 @@
 
   @media screen and (min-width: 1200px) {
     left: 652px;
+
+    animation: ice-cream-move 3500ms both cubic-bezier(0, 0.5, 0.7, 1);
+    animation-delay: 500ms;
   }
 }
 
@@ -320,5 +334,119 @@
     display: block;
     left: 16px;
     bottom: 65px;
+
+    animation: cup-roll 3500ms ease-out both;
+    animation-delay: 500ms;
+  }
+}
+
+@keyframes title-vibration {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    transform: translate(2px, 2px);
+  }
+  80% {
+    transform: translate(2px, -2px);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
+
+@keyframes cup-roll {
+  0% {
+    transform: translateX(700px) rotate(720deg);
+  }
+
+  10% {
+    transform: translateX(700px) rotate(720deg);
+  }
+
+  30% {
+    transform: translateX(650px) rotate(670deg);
+  }
+  55% {
+    transform: translateX(650px) rotate(670deg);
+  }
+
+  70% {
+    transform: translateX(600px) rotate(620deg);
+  }
+
+  75% {
+    transform: translateX(600px) rotate(620deg);
+  }
+
+  90% {
+    transform: translateX(-20px) rotate(-40deg);
+  }
+  100% {
+    transform: translateX(0) rotate(0);
+  }
+}
+
+@keyframes ice-cream-move {
+  0% {
+    transform: translateY(550px) translateX(250px) rotate(-30deg);
+  }
+
+  30% {
+    transform: translateY(250px) translateX(250px) rotate(-40deg);
+  }
+
+  50% {
+    transform: translateY(250px) translateX(250px) rotate(-40deg);
+  }
+
+  60% {
+    transform: translateY(190px) translateX(200px) rotate(-50deg);
+  }
+
+  75% {
+    transform: translateY(190px) translateX(200px) rotate(-50deg);
+  }
+
+  80% {
+    transform: translateY(450px) translateX(50px) rotate(-30deg);
+  }
+
+  95% {
+    transform: translateY(0) translateX(0) rotate(0deg) scale3d(1.15, 1, 1);
+  }
+  90% {
+    transform: translateY(0) translateX(0) rotate(0deg) scale3d(0.9, 1.15, 1);
+  }
+
+  100% {
+    transform: translateY(0) translateX(0) rotate(0deg) scale3d(1, 1, 1);
+  }
+}
+
+@keyframes title-animation {
+  0% {
+    transform: translateY(320px) translateX(-70px) scale(0.5);
+  }
+
+  75% {
+    transform: translateY(320px) translateX(-70px) scale(0.5);
+  }
+
+  90% {
+    transform: translateY(0px) translateX(-70px) scale(0.5) scale3d(0.9, 1.3, 1);
+  }
+  95% {
+    transform: translateY(0px) translateX(-70px) scale(0.5) scale3d(1.3, 0.9, 1);
+  }
+
+  100% {
+    transform: translateY(0) translateX(0) scale(1) scale3d(1, 1, 1);
   }
 }
