--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -119,7 +119,7 @@
     left: 0;
     bottom: -24px;
     position: absolute;
-    width: 216px;
+    width: 100%;
     height: 1px;
     background-color: #e1e1e1;
 
@@ -212,7 +212,7 @@
     left: 0;
     bottom: -24px;
     position: absolute;
-    width: 216px;
+    width: 100%;
     height: 1px;
     background-color: #e1e1e1;
 
