--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -85,6 +85,59 @@ button:hover {
   overflow: hidden;
 }
 
+@-webkit-keyframes slide-to-left {
+  0% {
+    opacity: 0;
+    transform: translateX(80px);
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-to-left {
+  0% {
+    opacity: 0;
+    transform: translateX(80px);
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@-webkit-keyframes slide-to-top {
+  0% {
+    opacity: 0;
+    transform: translateY(150px);
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes slide-to-top {
+  0% {
+    opacity: 0;
+    transform: translateY(150px);
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 /* header */
 .header {
   padding-top: 12px;
@@ -146,7 +199,7 @@ button:hover {
   color: #ffffff;
   fill: #ffffff;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.5px) {
   .header__button {
     display: none;
   }
@@ -445,7 +498,7 @@ button:hover {
   left: 0;
   bottom: -24px;
   position: absolute;
-  width: 216px;
+  width: 100%;
   height: 1px;
   background-color: #e1e1e1;
 }
@@ -548,7 +601,7 @@ button:hover {
   left: 0;
   bottom: -24px;
   position: absolute;
-  width: 216px;
+  width: 100%;
   height: 1px;
   background-color: #e1e1e1;
 }
@@ -672,6 +725,11 @@ button:hover {
   }
 }
 
+.footer__text.element-show {
+  -webkit-animation: slide-to-top 400ms ease-out 700ms both;
+          animation: slide-to-top 400ms ease-out 700ms both;
+}
+
 @media screen and (min-width: 768px) {
   .footer__blocks {
     display: flex;
@@ -695,6 +753,10 @@ button:hover {
   .footer__second-block {
     width: 338px;
   }
+}
+.footer__second-block.element-show {
+  -webkit-animation: slide-to-left 400ms ease-out 700ms both;
+          animation: slide-to-left 400ms ease-out 700ms both;
 }
 
 .footer__list {
@@ -723,10 +785,11 @@ button:hover {
   background-color: #f8d24e;
   fill: #84a178;
   border-radius: 50%;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer__link:hover, .footer__link:focus {
   fill: #fcfcfc;
+  transform: scale(1.2);
 }
 
 .footer__contact {
@@ -1079,7 +1142,7 @@ button:hover {
   padding-left: 20px;
   padding-right: 21px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .about__container {
     padding-top: 60px;
     padding-bottom: 43px;
@@ -1109,7 +1172,7 @@ button:hover {
   align-items: center;
   margin-bottom: 32px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .about__topic {
     margin-bottom: 72px;
   }
@@ -1128,7 +1191,7 @@ button:hover {
   color: #fcfcfc;
   margin-bottom: 12px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .about__label {
     font-weight: 800;
     font-size: 22px;
@@ -1151,12 +1214,12 @@ button:hover {
   text-transform: uppercase;
   color: #fcfcfc;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.5px) {
   .about__title {
     width: 200px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .about__title {
     font-size: 34px;
     line-height: 1.26;
@@ -1179,12 +1242,12 @@ button:hover {
   background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
   box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.5px) {
   .about__thumb {
     margin-bottom: 62px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .about__thumb {
     width: 330px;
     height: 330px;
@@ -1204,7 +1267,7 @@ button:hover {
   top: 22px;
   width: 279px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .about__cow {
     top: 26px;
     width: 330px;
@@ -1220,13 +1283,13 @@ button:hover {
 .about__info {
   width: 220px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.5px) {
   .about__info {
     margin-right: auto;
     margin-left: auto;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .about__info {
     width: 334px;
     padding-top: 8px;
@@ -1247,12 +1310,12 @@ button:hover {
   color: #fcfcfc;
   margin-bottom: 4px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.5px) {
   .about__values {
     text-align: center;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .about__values {
     margin-bottom: 8px;
   }
@@ -1270,12 +1333,12 @@ button:hover {
   color: #fcfcfc;
   margin-bottom: 10px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.5px) {
   .about__recipes {
     text-align: center;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .about__recipes {
     line-height: 1.76;
     letter-spacing: 0.04em;
@@ -1288,7 +1351,7 @@ button:hover {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.5px) {
   .about__recap {
     position: absolute;
     width: 1px;
@@ -1303,7 +1366,7 @@ button:hover {
     overflow: hidden;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .about__recap {
     font-weight: 400;
     font-size: 12px;
@@ -1330,7 +1393,7 @@ button:hover {
   border-radius: 10px;
   background: #F8D24E;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.5px) {
   .about__btn {
     margin-right: auto;
     margin-left: auto;
