--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -11,6 +11,7 @@
 }
 
 .footer__text {
+  opacity: 0;
   margin-bottom: 60px;
   text-transform: uppercase;
   color: getColor(primary-light);
@@ -22,6 +23,10 @@
 
   @media screen and (min-width: 1200px) {
     width: 510px;
+  }
+
+  &.element-show {
+    animation: slide-to-top 400ms ease-out 400ms both;
   }
 }
 
@@ -62,10 +67,6 @@
   }
 }
 
-.footer__text.element-show {
-  animation: slide-to-top 400ms ease-out 700ms both;
-}
-
 .footer__blocks {
   @media screen and (min-width: 768px) {
     display: flex;
@@ -80,6 +81,7 @@
 }
 
 .footer__second-block {
+  opacity: 0;
   @media screen and (min-width: 768px) {
     width: 285px;
   }
@@ -104,9 +106,6 @@
   @media screen and (min-width: 1200px) {
     margin-bottom: 40px;
   }
-}
-
-.footer__item {
 }
 
 .footer__link {
