--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -45,6 +45,12 @@ button:hover {
   margin-left: auto;
   margin-right: auto;
 }
+@media screen and (max-width: 319.5px) {
+  .container {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
 @media screen and (min-width: 320px) {
   .container {
     width: 320px;
@@ -1903,6 +1909,10 @@ textarea {
   color: #ffffff;
 }
 
+.hero {
+  overflow: hidden;
+}
+
 .hero__container {
   position: relative;
   padding-top: 38px;
@@ -1959,6 +1969,17 @@ textarea {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .hero__title-for-animation {
+    -webkit-animation: title-vibration 0.3s both;
+            animation: title-vibration 0.3s both;
+    -webkit-animation-delay: 4000ms;
+            animation-delay: 4000ms;
+    -webkit-animation-iteration-count: 10;
+            animation-iteration-count: 10;
+  }
+}
+
 .hero__title {
   margin-bottom: 32px;
   font-family: "Seymour One";
@@ -1980,6 +2001,10 @@ textarea {
     max-width: 367px;
     font-size: 38px;
     line-height: 1.2631578947;
+    -webkit-animation: title-animation 3500ms cubic-bezier(0, 0.5, 0.7, 1) both;
+            animation: title-animation 3500ms cubic-bezier(0, 0.5, 0.7, 1) both;
+    -webkit-animation-delay: 500ms;
+            animation-delay: 500ms;
   }
 }
 
@@ -2197,6 +2222,10 @@ textarea {
 @media screen and (min-width: 1200px) {
   .hero__fun-ice {
     left: 652px;
+    -webkit-animation: ice-cream-move 3500ms both cubic-bezier(0, 0.5, 0.7, 1);
+            animation: ice-cream-move 3500ms both cubic-bezier(0, 0.5, 0.7, 1);
+    -webkit-animation-delay: 500ms;
+            animation-delay: 500ms;
   }
 }
 
@@ -2216,9 +2245,198 @@ textarea {
     display: block;
     left: 16px;
     bottom: 65px;
+    -webkit-animation: cup-roll 3500ms ease-out both;
+            animation: cup-roll 3500ms ease-out both;
+    -webkit-animation-delay: 500ms;
+            animation-delay: 500ms;
   }
 }
 
+@-webkit-keyframes title-vibration {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    transform: translate(2px, 2px);
+  }
+  80% {
+    transform: translate(2px, -2px);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
+
+@keyframes title-vibration {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    transform: translate(2px, 2px);
+  }
+  80% {
+    transform: translate(2px, -2px);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
+@-webkit-keyframes cup-roll {
+  0% {
+    transform: translateX(700px) rotate(720deg);
+  }
+  10% {
+    transform: translateX(700px) rotate(720deg);
+  }
+  30% {
+    transform: translateX(650px) rotate(670deg);
+  }
+  55% {
+    transform: translateX(650px) rotate(670deg);
+  }
+  70% {
+    transform: translateX(600px) rotate(620deg);
+  }
+  75% {
+    transform: translateX(600px) rotate(620deg);
+  }
+  90% {
+    transform: translateX(-20px) rotate(-40deg);
+  }
+  100% {
+    transform: translateX(0) rotate(0);
+  }
+}
+@keyframes cup-roll {
+  0% {
+    transform: translateX(700px) rotate(720deg);
+  }
+  10% {
+    transform: translateX(700px) rotate(720deg);
+  }
+  30% {
+    transform: translateX(650px) rotate(670deg);
+  }
+  55% {
+    transform: translateX(650px) rotate(670deg);
+  }
+  70% {
+    transform: translateX(600px) rotate(620deg);
+  }
+  75% {
+    transform: translateX(600px) rotate(620deg);
+  }
+  90% {
+    transform: translateX(-20px) rotate(-40deg);
+  }
+  100% {
+    transform: translateX(0) rotate(0);
+  }
+}
+@-webkit-keyframes ice-cream-move {
+  0% {
+    transform: translateY(550px) translateX(250px) rotate(-30deg);
+  }
+  30% {
+    transform: translateY(250px) translateX(250px) rotate(-40deg);
+  }
+  50% {
+    transform: translateY(250px) translateX(250px) rotate(-40deg);
+  }
+  60% {
+    transform: translateY(190px) translateX(200px) rotate(-50deg);
+  }
+  75% {
+    transform: translateY(190px) translateX(200px) rotate(-50deg);
+  }
+  80% {
+    transform: translateY(450px) translateX(50px) rotate(-30deg);
+  }
+  95% {
+    transform: translateY(0) translateX(0) rotate(0deg) scale3d(1.15, 1, 1);
+  }
+  90% {
+    transform: translateY(0) translateX(0) rotate(0deg) scale3d(0.9, 1.15, 1);
+  }
+  100% {
+    transform: translateY(0) translateX(0) rotate(0deg) scale3d(1, 1, 1);
+  }
+}
+@keyframes ice-cream-move {
+  0% {
+    transform: translateY(550px) translateX(250px) rotate(-30deg);
+  }
+  30% {
+    transform: translateY(250px) translateX(250px) rotate(-40deg);
+  }
+  50% {
+    transform: translateY(250px) translateX(250px) rotate(-40deg);
+  }
+  60% {
+    transform: translateY(190px) translateX(200px) rotate(-50deg);
+  }
+  75% {
+    transform: translateY(190px) translateX(200px) rotate(-50deg);
+  }
+  80% {
+    transform: translateY(450px) translateX(50px) rotate(-30deg);
+  }
+  95% {
+    transform: translateY(0) translateX(0) rotate(0deg) scale3d(1.15, 1, 1);
+  }
+  90% {
+    transform: translateY(0) translateX(0) rotate(0deg) scale3d(0.9, 1.15, 1);
+  }
+  100% {
+    transform: translateY(0) translateX(0) rotate(0deg) scale3d(1, 1, 1);
+  }
+}
+@-webkit-keyframes title-animation {
+  0% {
+    transform: translateY(320px) translateX(-70px) scale(0.5);
+  }
+  75% {
+    transform: translateY(320px) translateX(-70px) scale(0.5);
+  }
+  90% {
+    transform: translateY(0px) translateX(-70px) scale(0.5) scale3d(0.9, 1.3, 1);
+  }
+  95% {
+    transform: translateY(0px) translateX(-70px) scale(0.5) scale3d(1.3, 0.9, 1);
+  }
+  100% {
+    transform: translateY(0) translateX(0) scale(1) scale3d(1, 1, 1);
+  }
+}
+@keyframes title-animation {
+  0% {
+    transform: translateY(320px) translateX(-70px) scale(0.5);
+  }
+  75% {
+    transform: translateY(320px) translateX(-70px) scale(0.5);
+  }
+  90% {
+    transform: translateY(0px) translateX(-70px) scale(0.5) scale3d(0.9, 1.3, 1);
+  }
+  95% {
+    transform: translateY(0px) translateX(-70px) scale(0.5) scale3d(1.3, 0.9, 1);
+  }
+  100% {
+    transform: translateY(0) translateX(0) scale(1) scale3d(1, 1, 1);
+  }
+}
 .burger-toggle {
   color: #ffffff;
   padding-left: 0;
