--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -8,7 +8,7 @@
     padding-left: 20px;
     padding-right: 21px;
 
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
+    @media screen and (min-width: 768px) {
     padding-top: 60px;    
     padding-bottom: 43px;
     padding-left: 32px;
@@ -34,7 +34,7 @@
     align-items: center;
     margin-bottom: 32px;
    
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
+    @media screen and (min-width: 768px) {
         margin-bottom: 72px;}
 
     @media screen and (min-width: 1200px) {
@@ -50,7 +50,7 @@
     
     margin-bottom: 12px;
 
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
+    @media screen and (min-width: 768px) {
     font-weight: 800;
     font-size: 22px;
     line-height: 1.23; 
@@ -74,7 +74,7 @@
     @media screen and (max-width: 767.5px) {
     width: 200px;}
     
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
+    @media screen and (min-width: 768px) {
     font-size: 34px;
     line-height: 1.26;  
     letter-spacing: 0.06em;  
@@ -100,7 +100,7 @@
     @media screen and (max-width: 767.5px) {
     margin-bottom: 62px;}
 
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
+    @media screen and (min-width: 768px) {
         width: 330px;
         height: 330px;
         margin-right: 38px;  
@@ -118,7 +118,7 @@
     top: 22px;
     width: 279px;
 
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
+    @media screen and (min-width: 768px) {
     top: 26px; 
     width: 330px;   
          }
@@ -136,7 +136,7 @@
     margin-right: auto;
     margin-left: auto;}
     
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
+    @media screen and (min-width: 768px) {
     width: 334px;
     padding-top: 8px;}
 
@@ -157,7 +157,7 @@
     @media screen and (max-width: 767.5px) {
     text-align: center;}
 
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
+    @media screen and (min-width: 768px) {
     margin-bottom: 8px;}
 
     @media screen and (min-width: 1200px) {
@@ -177,7 +177,7 @@
     @media screen and (max-width: 767.5px) {
     text-align: center;}
 
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
+    @media screen and (min-width: 768px) {
     line-height: 1.76;
     letter-spacing: 0.04em;}
 
@@ -199,7 +199,7 @@
     clip: rect(0 0 0 0);
     overflow: hidden;}
 
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
+    @media screen and (min-width: 768px) {
     font-weight: 400;
     font-size: 12px;
     line-height: 1.94;
