--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -40,7 +40,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767.5px) {
   .advantages-list__item--first {
     margin-bottom: 28px;
   }
@@ -78,7 +78,7 @@
   }
 }
 
-n .icon-advantages {
+ .icon-advantages {
   display: block;
   padding: 7px;
   width: 50px;
