change picture markup

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,11 +1,119 @@
 <section class="gallery">
-    <div class="gallery__container">
-        <h2 class="gallery__title visually-hidden">Gallery</h2>
-        <div class="gallery__thumb">
-          <div class="swiper gallery__swiper">
-                <div class="swiper-wrapper gallery__wrapper">
-                  <div class="swiper-slide gallery__slide">
-                    <img class="gallery__card"
+  <div class="gallery__container">
+    <h2 class="gallery__title visually-hidden">Gallery</h2>
+    <div class="gallery__thumb">
+      <div class="swiper gallery__swiper">
+        <div class="swiper-wrapper gallery__wrapper">
+          <div class="swiper-slide gallery__slide">
+            <!-- -------------- -->
+            <picture>
+              <source
+                type="image/jpeg"
+                srcset="
+                  ./images/gallery/main-ice/mobile/main-ice_280.jpg 280w,
+                  ./images/gallery/main-ice/mobile/main-ice_560.jpg 560w
+                "
+                media="screen and (max-width: 767.5px)"
+                sizes="280px, 100vw"
+              />
+              <source
+                type="image/jpeg"
+                srcset="
+                  ./images/gallery/main-ice/tablet/main-ice_704.jpg   704w,
+                  ./images/gallery/main-ice/tablet/main-ice_1408.jpg 1408w
+                "
+                media="screen and (max-width: 1199.5px)"
+                sizes="(min-width: 768px) 704px, 100vw"
+              />
+              <source
+                type="image/jpeg"
+                srcset="
+                  ./images/gallery/main-ice/desktop/gallery-main_1013.jpg 1013w,
+                  ./images/gallery/main-ice/desktop/gallery-main_2026.jpg 2026w
+                "
+                media="screen and (min-width: 1200px)"
+                sizes="1013px, 100vw"
+              />
+              <img
+                class="gallery__card"
+                src="./images/gallery/main-ice/desktop/gallery-main_1013.jpg"
+                alt="ice card 2"
+              />
+            </picture>
+          </div>
+          <div class="swiper-slide gallery__slide">
+            <picture>
+              <source
+                type="image/jpeg"
+                srcset="
+                  ./images/gallery/slide2/ice-gallery-changed_1013.jpg 1013w,
+                  ./images/gallery/slide2/ice-gallery-changed_2026.jpg 2026w
+                "
+                media="screen and (max-width: 767.5px)"
+                sizes="280px, 100vw"
+              />
+              <source
+                type="image/jpeg"
+                srcset="
+                  ./images/gallery/slide2/ice-gallery-changed_1013.jpg 1013w,
+                  ./images/gallery/slide2/ice-gallery-changed_2026.jpg 2026w
+                "
+                media="screen and (max-width: 1199.5px)"
+                sizes="(min-width: 768px) 704px, 100vw"
+              />
+              <source
+                type="image/jpeg"
+                srcset="
+                  ./images/gallery/slide2/ice-gallery-changed_1013.jpg 1013w,
+                  ./images/gallery/slide2/ice-gallery-changed_2026.jpg 2026w
+                "
+                media="screen and (min-width: 1200px)"
+                sizes="1013px, 100vw"
+              />
+              <img
+                class="gallery__card"
+                src="./images/gallery/slide2/ice-gallery-changed_1013.jpg"
+                alt="ice card 2"
+              />
+            </picture>
+          </div>
+          <div class="swiper-slide gallery__slide">
+            <picture>
+              <source
+                type="image/jpeg"
+                srcset="
+                  ./images/gallery/changed-card2/changed_1013.jpg 1013w,
+                  ./images/gallery/changed-card2/changed_2026.jpg 2026w
+                "
+                media="screen and (max-width: 767.5px)"
+                sizes="280px, 100vw"
+              />
+              <source
+                type="image/jpeg"
+                srcset="
+                  ./images/gallery/changed-card2/changed_1013.jpg 1013w,
+                  ./images/gallery/changed-card2/changed_2026.jpg 2026w
+                "
+                media="screen and (max-width: 1199.5px)"
+                sizes="(min-width: 768px) 704px, 100vw"
+              />
+              <source
+                type="image/jpeg"
+                srcset="
+                  ./images/gallery/changed-card2/changed_1013.jpg 1013w,
+                  ./images/gallery/changed-card2/changed_2026.jpg 2026w
+                "
+                media="screen and (min-width: 1200px)"
+                sizes="1013px, 100vw"
+              />
+              <img
+                class="gallery__card"
+                src="./images/gallery/changed-card2/changed_1013.jpg"
+                alt="ice card 2"
+              />
+            </picture>
+          </div>
+          <!-- <img class="gallery__card"
                         srcset="
                         ./images/gallery/main-ice/mobile/main-ice_280.jpg 280w,
                         ./images/gallery/main-ice/mobile/main-ice_560.jpg 560w,
@@ -26,22 +134,58 @@
                         "
                         sizes="(min-width: 1200px) 1013px"
                         src="./images/gallery/slide2/ice-gallery-changed_1013.jpg" 
-                        alt="ice card 2">
-                  </div>
-                  <div class="swiper-slide gallery__slide">
-                    <img class="gallery__card"
-                        srcset="
-                        ./images/gallery/slide3/changed_1013.jpg 1013w,
-                        ./images/gallery/slide3/changed_2026.jpg 2026w
-                        "
-                        sizes="(min-width: 1200px) 1013px"
-                        src="./images/gallery/slide3/changed_1013.jpg" 
-                        alt="ice card 3">
-                  </div>
-                </div>
-            </div>
+                        alt="ice card 2"> -->
+
+          <div class="swiper-slide gallery__slide">
+            <picture>
+              <source
+                type="image/jpeg"
+                srcset="
+                  ./images/gallery/main-ice/mobile/main-ice_280.jpg 280w,
+                  ./images/gallery/main-ice/mobile/main-ice_560.jpg 560w
+                "
+                media="screen and (max-width: 767.5px)"
+                sizes="280px, 100vw"
+              />
+              <source
+                type="image/jpeg"
+                srcset="
+                  ./images/gallery/main-ice/tablet/main-ice_704.jpg   704w,
+                  ./images/gallery/main-ice/tablet/main-ice_1408.jpg 1408w
+                "
+                media="screen and (max-width: 1199.5px)"
+                sizes="(min-width: 768px) 704px, 100vw"
+              />
+              <source
+                type="image/jpeg"
+                srcset="
+                  ./images/gallery/main-ice/desktop/gallery-main_1013.jpg 1013w,
+                  ./images/gallery/main-ice/desktop/gallery-main_2026.jpg 2026w
+                "
+                media="screen and (min-width: 1200px)"
+                sizes="1013px, 100vw"
+              />
+              <img
+                class="gallery__card"
+                src="./images/gallery/slide2/ice-gallery-changed_1013.jpg"
+                alt="ice card 2"
+              />
+            </picture>
+            <!-- <img
+              class="gallery__card"
+              srcset="
+                ./images/gallery/slide3/changed_1013.jpg 1013w,
+                ./images/gallery/slide3/changed_2026.jpg 2026w
+              "
+              sizes="(min-width: 1200px) 1013px"
+              src="./images/gallery/slide3/changed_1013.jpg"
+              alt="ice card 3"
+            /> -->
+          </div>
         </div>
-        <!-- <div class="gallery__thumb">
+      </div>
+    </div>
+    <!-- <div class="gallery__thumb">
             <img class="gallery__card"
                 srcset="
                 ./images/gallery/main-ice/mobile/main-ice_280.jpg 280w,
@@ -55,5 +199,5 @@
                 src="./images/gallery/main-ice/mobile/main-ice_280.jpg" 
                 alt="ice main image">
         </div> -->
-    </div>
+  </div>
 </section>
