--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -113,6 +113,8 @@
               />
             </picture>
           </div>
+          <!-- slider -->
+
           <!-- <img class="gallery__card"
                         srcset="
                         ./images/gallery/main-ice/mobile/main-ice_280.jpg 280w,
@@ -136,7 +138,8 @@
                         src="./images/gallery/slide2/ice-gallery-changed_1013.jpg" 
                         alt="ice card 2"> -->
 
-          <div class="swiper-slide gallery__slide">
+          <!-- ------------------------------------- -->
+          <!-- <div class="swiper-slide gallery__slide">
             <picture>
               <source
                 type="image/jpeg"
@@ -170,8 +173,10 @@
                 src="./images/gallery/slide2/ice-gallery-changed_1013.jpg"
                 alt="ice card 2"
               />
-            </picture>
-            <!-- <img
+            </picture> -->
+
+          <!-- ----------------------------- -->
+          <!-- <img
               class="gallery__card"
               srcset="
                 ./images/gallery/slide3/changed_1013.jpg 1013w,
@@ -181,11 +186,11 @@
               src="./images/gallery/slide3/changed_1013.jpg"
               alt="ice card 3"
             /> -->
-          </div>
         </div>
       </div>
     </div>
-    <!-- <div class="gallery__thumb">
+  </div>
+  <!-- <div class="gallery__thumb">
             <img class="gallery__card"
                 srcset="
                 ./images/gallery/main-ice/mobile/main-ice_280.jpg 280w,
@@ -199,5 +204,5 @@
                 src="./images/gallery/main-ice/mobile/main-ice_280.jpg" 
                 alt="ice main image">
         </div> -->
-  </div>
+  <!-- </div> -->
 </section>
