--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,74 +1,74 @@
 .gallery {
+  margin: 0 auto;
+  background-color: transparent;
+
+  position: absolute;
+  //  top:-32px;
+  right: 50%;
+
+  transform: translateX(50%);
+
+  @media screen and (max-width: 767.5px) {
+    top: -32px;
+  }
+
+  //tablet screen
+  @media screen and (min-width: 768px) {
+    top: -144px;
+  }
+  //desktop screen
+  @media screen and (min-width: 1200px) {
+    top: -98px;
+  }
+
+  &__container {
     margin: 0 auto;
-     background-color: transparent;
- 
-     position: absolute;
-    //  top:-32px;
-     right: 50%;
+    padding: 0px 20px;
+    min-width: 320px;
 
-     transform: translateX(50%);
-
-        @media screen and (max-width: 767px) {
-            top:-32px;
-            }
-
-        //tablet screen
-        @media screen and (min-width: 768px) {
-            top: -144px;
-            }
-        //desktop screen
-        @media screen and (min-width: 1200px) {
-            top: -98px;
-            }
- 
-     &__container {
-         margin: 0 auto;
-         padding: 0px 20px;
-         min-width: 320px;
-         
-     //mobile screen
-     @media screen and (max-width: 767px) {
-         width: 320px;
-     }
-      //tablet screen
-     @media screen and (min-width: 768px) {
-         width: 768px;
-         padding: 0px 32px;
-     }
-     //desktop screen
-     @media screen and (min-width: 1200px) {
-         width: 1200px;
-         padding-left: 93px;
-         padding-right: 94px;
-     }
-     }
-
-     &__thumb, &__card {
-
-        overflow: hidden;
-    
-    @media screen and (max-width: 767px) {
-        width: 280px;
-        height: 130px;
-        border-radius: 8px;
-        }
-    
-        //tablet screen
-    @media screen and (min-width: 768px) {
-        width: 704px;
-        height: 327px;
-        border-radius: 18px;
-        }
-       //desktop screen
-    @media screen and (min-width: 1200px) {
-        width: 1013px;
-        height: 422px;
-        border-radius: 24px;
-        }
-     }
+    //mobile screen
+    @media screen and (max-width: 767.5px) {
+      width: 320px;
     }
-    
-   .swiper {
-    width: 100%;
-    height: 100%;
-   }
+    //tablet screen
+    @media screen and (min-width: 768px) {
+      width: 768px;
+      padding: 0px 32px;
+    }
+    //desktop screen
+    @media screen and (min-width: 1200px) {
+      width: 1200px;
+      padding-left: 93px;
+      padding-right: 94px;
+    }
+  }
+
+  &__thumb,
+  &__card {
+    overflow: hidden;
+
+    @media screen and (max-width: 767.5px) {
+      width: 280px;
+      height: 130px;
+      border-radius: 8px;
+    }
+
+    //tablet screen
+    @media screen and (min-width: 768px) {
+      width: 704px;
+      height: 327px;
+      border-radius: 18px;
+    }
+    //desktop screen
+    @media screen and (min-width: 1200px) {
+      width: 1013px;
+      height: 422px;
+      border-radius: 24px;
+    }
+  }
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
