--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -90,20 +90,21 @@
   }
 }
 
-
 .products__item {
   position: relative;
   display: flex;
   flex-direction: column;
   text-align: center;
   width: 280px;
+  // width: 100%;
   height: 420px;
   padding: 123px 40px 16px 40px;
   border-radius: 24px;
   margin-bottom: 168px;
   background-color: getBgColor(prod-green);
   box-shadow: getShadow(prod-card);
-  transition: transform getAnim(time) getAnim(func);
+  transition: transform getAnim(time) getAnim(func),
+    box-shadow getAnim(time) getAnim(func);
   &:nth-child(2) {
     background-color: getBgColor(prod-yellow);
   }
@@ -124,6 +125,8 @@
     padding: 165px 64px 60px 64px;
     &:hover {
       transform: scale(1.05);
+      box-shadow: rgb(65 65 65 / 50%) 3px 3px 20px,
+        rgb(65 65 65 / 50%) -3px -3px 20px;
     }
   }
 }
