--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -45,7 +45,7 @@
         ./images/hero/hero-fun-ice-cream/tablet/tablet@2x.png   536w,
         ./images/hero/hero-fun-ice-cream/desktop/desktop@2x.png 912w
       "
-      sizes="(min-width: 1200px) 456px, (min-width: 768px) 268px, (min-width: 320px) 177px, 100vw"
+      sizes="(min-width: 1200px) 456px, (min-width: 768px) 268px, (min-width: 320px) 177px, 177px"
       class="hero__fun-ice"
       src="./images/hero/hero-fun-ice-cream/mobile/mobile@1x.png"
       alt="ice-cream plate"
@@ -57,7 +57,7 @@
         ./images/hero/hero-lot-ice-cream/tablet/tablet@2x.png   304w,
         ./images/hero/hero-lot-ice-cream/desktop/desktop@2x.png 450w
       "
-      sizes="(min-width: 1200px) 225px, (min-width: 768px) 152px, 100vw"
+      sizes="(min-width: 1200px) 225px, (min-width: 768px) 152px, 177px"
       class="hero__lot-ice"
       src="./images/hero/hero-lot-ice-cream/tablet/tablet@1x.png"
       alt="ice-cream cup"
