--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -62,6 +62,8 @@
   }
 }
 .hero__title-for-animation {
+  margin-bottom: 32px;
+
   @media screen and (min-width: 1200px) {
     animation: title-vibration 0.3s both;
     animation-delay: 4000ms;
@@ -69,11 +71,7 @@
   }
 }
 .hero__title {
-  //   padding-right: 53px;
-  margin-bottom: 32px;
-  // width: 247px;
-
-  font-family: 'Seymour One';
+  font-family: 'Seymour One', sans-serif;
 
   font-size: 26px;
   line-height: calc(33 / 26);
@@ -82,9 +80,14 @@
 
   color: #fcfcfc;
 
+  @media screen and (max-width: 280px) {
+    font-size: 23px;
+    line-height: calc(33 / 26);
+  }
+
   @media screen and (min-width: 768px) {
     margin-bottom: 24px;
-    max-width: 247px;
+    max-width: 248px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -99,12 +102,20 @@
 }
 
 .hero__title-part {
+  display: block;
   font-size: 34px;
   letter-spacing: 0em;
+  line-height: calc(33 / 34);
+
+  @media screen and (max-width: 280px) {
+    font-size: 23px;
+    line-height: calc(33 / 26);
+  }
 
   @media screen and (min-width: 1200px) {
     font-size: 38px;
     line-height: calc(48 / 38);
+    letter-spacing: 0.04em;
   }
 }
 
@@ -112,10 +123,6 @@
   display: flex;
   align-items: center;
   gap: 12px;
-
-  @media screen and (min-width: 1200px) {
-    gap: 34px;
-  }
 }
 
 .hero__products-link {
@@ -160,8 +167,8 @@
 }
 
 .hero__made-link {
-  // display: inline-block;
-  // min-width: 100px;
+  padding: 12px 3px;
+
   cursor: pointer;
 
   font-weight: 600;
@@ -192,11 +199,11 @@
   }
 
   @media screen and (min-width: 768px) {
-    min-width: 114px;
+    padding: 12px 10px;
   }
 
   @media screen and (min-width: 1200px) {
-    // min-width: 111px;
+    padding: 12px 22px;
 
     font-size: 14px;
     line-height: calc(17 / 14);
@@ -205,7 +212,7 @@
 
 .hero__benefits {
   padding-top: 14px;
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 767.5px) {
     display: none;
   }
   @media screen and (min-width: 1200px) {
@@ -256,7 +263,7 @@
 .hero__text-box {
   max-width: 139px;
   margin-left: 184px;
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 767.5px) {
     display: none;
   }
 
@@ -307,6 +314,10 @@
   position: absolute;
   bottom: 0;
   left: 83px;
+
+  @media screen and (max-width: 319.5px) {
+    left: calc((100% - 156px) / 2);
+  }
 
   @media screen and (min-width: 768px) {
     left: 408px;
