--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,5 +1,5 @@
 .section__products {
-  background-image: url(../images/background/mobile/background_mobile_885.png);
+  background-image: url(../images/background/mobile/ice-cream-885.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -7,24 +7,24 @@
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    background-image: url(../images/background/mobile/background_mobile_1770.png);
+    background-image: url(../images/background/mobile/ice-cream-885@2x.png);
   }
 
   @media screen and (min-width: 768px) {
-    background-image: url(../images/background/tablet/background_tablet_963.png);
+    background-image: url(../images/background/tablet/ice-cream-963.png);
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: url(../images/background/tablet/background_tablet_1926.png);
+      background-image: url(../images/background/tablet/ice-cream-963@2x.png);
     }
   }
 
   @media screen and (min-width: 1200px) {
-    background-image: url(../images/background/desktop/background_desktop_1300.png);
+    background-image: url(../images/background/desktop/ice-cream-1300.png);
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: url(../images/background/desktop/background_desktop_2600.png);
+      background-image: url(../images/background/desktop/ice-cream-1300@2x.png);
     }
   }
 }
