--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -848,7 +848,7 @@ button:hover {
 }
 
 .section__products {
-  background-image: url(../images/background/mobile/background_mobile_885.png);
+  background-image: url(../images/background/mobile/ice-cream-885.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -856,27 +856,27 @@ button:hover {
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .section__products {
-    background-image: url(../images/background/mobile/background_mobile_1770.png);
+    background-image: url(../images/background/mobile/ice-cream-885@2x.png);
   }
 }
 @media screen and (min-width: 768px) {
   .section__products {
-    background-image: url(../images/background/tablet/background_tablet_963.png);
+    background-image: url(../images/background/tablet/ice-cream-963.png);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .section__products {
-    background-image: url(../images/background/tablet/background_tablet_1926.png);
+    background-image: url(../images/background/tablet/ice-cream-963@2x.png);
   }
 }
 @media screen and (min-width: 1200px) {
   .section__products {
-    background-image: url(../images/background/desktop/background_desktop_1300.png);
+    background-image: url(../images/background/desktop/ice-cream-1300.png);
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .section__products {
-    background-image: url(../images/background/desktop/background_desktop_2600.png);
+    background-image: url(../images/background/desktop/ice-cream-1300@2x.png);
   }
 }
 
