change products img

--- a/src/sass/components/_products_modal.scss
+++ b/src/sass/components/_products_modal.scss
@@ -100,7 +100,7 @@
     position: absolute;
     top: -7;
     left: 0;
-    background-image: url(../images/products/tablet-mobile/1/1_200.png);
+    background-image: url(../images/products/tablet-mobile/circle-green-200.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -109,7 +109,7 @@
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: url(../images/products/tablet-mobile/1/1_400.png);
+      background-image: url(../images/products/tablet-mobile/circle-green-200@2x.png);
     }
   }
 }
@@ -122,7 +122,7 @@
     position: absolute;
     top: -7;
     left: 0;
-    background-image: url(../images/products/tablet-mobile/3/3_200.png);
+    background-image: url(../images/products/tablet-mobile/circle-coral-200.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -131,7 +131,7 @@
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: url(../images/products/tablet-mobile/3/3_400.png);
+      background-image: url(../images/products/tablet-mobile/circle-coral-200@2x.png);
     }
   }
 }
@@ -144,7 +144,7 @@
     position: absolute;
     top: -7;
     left: 0;
-    background-image: url(../images/products/tablet-mobile/2/2_200.png);
+    background-image: url(../images/products/tablet-mobile/circle-yellow-200.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -153,7 +153,7 @@
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: url(../images/products/tablet-mobile/2/2_400.png);
+      background-image: url(../images/products/tablet-mobile/circle-yellow-200@2x.png);
     }
   }
 }
