change modal-ingred img

--- a/src/sass/components/_modal-ingredients.scss
+++ b/src/sass/components/_modal-ingredients.scss
@@ -40,7 +40,7 @@
   &::before {
     content: '';
     position: absolute;
-    background-image: url(../images/info-modal/ice_132.png);
+    background-image: url(../images/info-modal/ice-cream-132.png);
     top: -7;
     left: 0;
     background-position: center;
@@ -51,7 +51,7 @@
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: url(../images/info-modal/ice_164.png);
+      background-image: url(../images/info-modal/ice-cream-132@2x.png);
     }
   }
 }
@@ -175,7 +175,7 @@
     display: none;
   }
 
-  &:not(:placeholder-shown)  .ingredients-form__label {
+  &:not(:placeholder-shown) .ingredients-form__label {
     display: none;
   }
 
